argocd/apps/immich/immich-volume-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: cloud
spec:
  template:
    spec:
      volumes:
      - name: nextcloud-external-lib
        persistentVolumeClaim:
          claimName: nextcloud-nextcloud-data
        readOnly: true
      containers:
      - name: immich-server
        volumeMounts:
        - name: nextcloud-external-lib
          mountPath: /nextcloudlib
          readOnly: true
